; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/extr_dm-era-target.c_wake_worker.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/extr_dm-era-target.c_wake_worker.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.era = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.era*)* @wake_worker to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wake_worker(%struct.era* %0) #0 {
  %2 = alloca %struct.era*, align 8
  store %struct.era* %0, %struct.era** %2, align 8
  %3 = load %struct.era*, %struct.era** %2, align 8
  %4 = getelementptr inbounds %struct.era, %struct.era* %3, i32 0, i32 2
  %5 = call i32 @atomic_read(i32* %4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %14, label %7

7:                                                ; preds = %1
  %8 = load %struct.era*, %struct.era** %2, align 8
  %9 = getelementptr inbounds %struct.era, %struct.era* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.era*, %struct.era** %2, align 8
  %12 = getelementptr inbounds %struct.era, %struct.era* %11, i32 0, i32 0
  %13 = call i32 @queue_work(i32 %10, i32* %12)
  br label %14

14:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @atomic_read(i32*) #1

declare dso_local i32 @queue_work(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
